[B]2.2.3[/B]

- Updated language files from Transifex

[B]2.2.2[/B]

- Updated language files from Transifex

[B]2.2.1[/B]

- Updated language files from Transifex

[B]2.2.0[/B]
- Set minimum GUI version to 5.0.0
- Adjusted to Gotham code changes

[B]2.1.7[/B]

- Updated language files from Transifex

[B]2.1.6[/B]

- Updated language files from Transifex

[B]2.1.5[/B]

- Updated language files from Transifex

[B]2.1.4[/B]

- Updated language files from Transifex

[B]2.1.3[/B]

- Updated language files from Transifex

[B]2.1.2[/B]

- Updated language files from Transifex

[B]2.1.0[/B]

- Changed the home menu to Horizontal Layout instead of Vertical
- Added support for the TvTunes Addon enable it in skin settings\General (if you have it installed)
- Added support for the Weather+ script (install it and select it in weather settings)
- Updated translation files
- Added some more codec flagging images (eg: pcm_bluray, wav files, etc)
- Added Visual notification in Add-on Thumbnail view if an add-on is broken

[B]2.0.0[/B]

- Bumped the skin version up for the major change to eden branch

[B]1.2.0[/B]

- All media views now follow a similar layout off File List on the Left hand side and icons/data on the right
- Views are all now in content panels (no fullscreen black)
- Added a thumb view for addons
- Non full screen Now Playing Media info (Bottom left) has more info
- Full screen Now Playing Media info trimmed down
- Fullscreen Player controls changed
- Media windows side menu is completely redesigned (and also lower case)
- Added a "filter" button to all media windows
- Added Filter (BLAH) text to the item/page count bottom right
- Removed the Disc Play button from home (which relies on !System.HasMediaDVD to appear)
- Repositioned the seekbar from lower right to upper right

[B]1.1.0[/B]

- Redesigned the video and Music OSD Info and controls
- Added more images for codec flagging on videos and audio
- Added all the windows needed for the new Addon Browser