@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="skin.confluence"
-  version="2.2.3"
+  version="2.3.0"
   name="Confluence"
   provider-name="Jezz_X, Team XBMC">
   <requires>
