@@ -1,3 +1,6 @@
+[B]2.3.0[/B]
+- Remove skin support for external addons
+
 [B]2.2.3[/B]
 
 - Updated language files from Transifex
